@@ -1,4 +1,5 @@
 r60:
+blankaudio now takes an array of channel constants since this better matches how most other functions work
 fixed splitchannels crash on certain channel configurations (YomikoR)
 freezeframes now accepts empty arrays and simply passes through the source clip
 
